fixed issue with taoster not showing up after iframe is loaded

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -42,8 +42,8 @@
   font-family: "Helv Neue Roman";
 }
 
-dde-toaster {
-  min-height: 50px;
+dde-toaster {  
+  position: absolute;
 }
 
 @media (max-width: 1200px) {
